--- a/web/templates/change_password.html
+++ b/web/templates/change_password.html
@@ -138,6 +138,7 @@
     {% endif %}
     
     <form method="POST">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
         <div class="form-group">
             <label for="current_password">Current Password</label>
             <div class="password-wrapper">
