--- a/web/templates/entry_forms/item.html
+++ b/web/templates/entry_forms/item.html
@@ -31,6 +31,7 @@
     </div>
     
     <form method="POST" enctype="multipart/form-data">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
         <input type="hidden" id="has-entry" value="{% if entry %}true{% else %}false{% endif %}">
         
         {% if is_billed %}
