--- a/web/templates/entry_forms/session.html
+++ b/web/templates/entry_forms/session.html
@@ -38,6 +38,7 @@
     </div>
     
     <form method="post">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
         
         <!-- Session number display -->
         {% if not is_edit %}
