--- a/web/templates/entry_forms/upload.html
+++ b/web/templates/entry_forms/upload.html
@@ -36,6 +36,7 @@
     </div>
     
     <form method="POST" id="upload-form" enctype="multipart/form-data">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
         <!-- Date and Time -->
         <div class="two-column-grid">
             <div class="form-group">
