--- a/web/templates/entry_forms/absence.html
+++ b/web/templates/entry_forms/absence.html
@@ -31,6 +31,7 @@
     </div>
     
     <form method="POST">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
         {% if is_billed %}
         <div class="billed-warning">
             <i data-lucide="alert-circle"></i>
