--- a/web/templates/add_client.html
+++ b/web/templates/add_client.html
@@ -20,6 +20,7 @@
     {% endif %}
 
     <form method="post" data-file-number-format="{{ file_number_format }}">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
         <div class="form-group">
             <label for="type_id">Client Type</label>
             <select id="type_id" name="type_id" required>
